# kinematics-dynamics

./: .gitignore  .gitmodules  .travis.yml  AmorCartesianControl_8hpp_source.html  AsibotConfiguration_8hpp_source.html  AsibotSolver_8hpp_source.html  AsibotSolver__ParamsParser_8h_source.html  BasicCartesianControl_8hpp_source.html  BasicCartesianControl__ParamsParser_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  CartesianControlClient_8hpp_source.html  CartesianControlClient__ParamsParser_8h_source.html  CartesianControlServerROS2_8hpp_source.html  CartesianControlServerROS2__ParamsParser_8h_source.html  CartesianControlServer_8hpp_source.html  CartesianControlServer__ParamsParser_8h_source.html  CentroidTransform_8hpp_source.html  ChainFkSolverPos__ST_8hpp_source.html  ChainIkSolverPos__ID_8hpp_source.html  ChainIkSolverPos__ST_8hpp_source.html  ConfigurationSelector_8hpp_source.html  FtCompensation_8hpp_source.html  GrabberResponder_8hpp_source.html  HaarDetectionController_8hpp_source.html  ICartesianControl_8h.html  ICartesianControl_8h_source.html  ICartesianSolver_8h.html  ICartesianSolver_8h_source.html  KdlSolverUtils_8hpp_source.html  KdlSolver_8hpp_source.html  KdlSolver__ParamsParser_8h_source.html  KdlTreeSolver_8hpp_source.html  KdlTreeSolver__ParamsParser_8h_source.html  KdlVectorConverter_8hpp_source.html  KeyboardController_8hpp_source.html  KinematicRepresentation_8hpp_source.html  LeapMotionSensorDevice_8hpp_source.html  LinearTrajectoryThread_8hpp_source.html  MatrixExponential_8hpp_source.html  (+365 more)
bindings/: CMakeLists.txt  kinematics_dynamics.i  roboticslab_kinematics_dynamics.i  teo.i
bindings/python/: CMakeLists.txt  kinematics_dynamics.py
doc/: CMakeLists.txt  Doxyfile  groups.dox  juan-tricks.md  kinematics-dynamics-install.md  kinematics-dynamics.bib  main.dox  motores.xlsx  teo-post-install.md  teo_diagrams.md  teo_environment_variables.dox  teo_environment_variables.md  teo_install.md  teo_install_cmake_on_ubuntu_14_10.dox  teo_install_cmake_on_ubuntu_14_10.md  teo_install_kdl_on_ubuntu_14_10.dox  teo_install_kdl_on_ubuntu_14_10.md  teo_install_on_ubuntu_14_10.dox  teo_install_on_ubuntu_14_10.md  teo_install_openrave_on_ubuntu_14_10.dox  teo_install_openrave_on_ubuntu_14_10.md  teo_install_yarp_on_ubuntu_14_10.dox  teo_install_yarp_on_ubuntu_14_10.md  teo_post_install.dox  teo_post_install.md  teo_use_libaries_externally.dox  wifi_info.txt
doc/bibtex/: pardosgotor2018str_handbook.bib
doc/fig/: DH parameters.html  DH parameters.md
examples/cpp/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/ColorDebug/: CMakeLists.txt
libraries/KdlSolverUtils/: CMakeLists.txt  KdlSolverUtils.cpp  KdlSolverUtils.hpp
libraries/KdlVectorConverterLib/: CMakeLists.txt  KdlVectorConverter.cpp  KdlVectorConverter.hpp
libraries/KinematicRepresentationLib/: CMakeLists.txt  KinAcceleration.cpp  KinPose.cpp  KinVelocity.cpp  KinematicRepresentation.cpp  KinematicRepresentation.hpp
libraries/ScrewTheoryIkSolverLib/: CMakeLists.txt  ScrewTheoryIkSolver.cpp  ScrewTheoryIkSolver.hpp
libraries/ScrewTheoryLib/: CMakeLists.txt  ChainIkSolverPos_ST.hpp  ConfigurationSelector.cpp  ConfigurationSelector.hpp  ConfigurationSelectorHumanoidGait.cpp  ConfigurationSelectorLeastOverallAngularDisplacement.cpp  LogComponent.cpp  LogComponent.hpp  MatrixExponential.cpp  MatrixExponential.hpp  PadenKahanSubproblems.cpp  PardosGotorSubproblems.cpp  PardosSubproblems.cpp  ProductOfExponentials.cpp  ProductOfExponentials.hpp  ScrewTheoryIkProblem.cpp  ScrewTheoryIkProblem.hpp  ScrewTheoryIkProblemBuilder.cpp  ScrewTheoryIkSubproblems.hpp  ScrewTheoryTools.cpp  ScrewTheoryTools.hpp
libraries/TeoYarp/: CMakeLists.txt  ICartesianControl.h  ICartesianSolver.h  ITwoLimbCartesianControl.h
libraries/TrajectoryLib/: CMakeLists.txt  GaitTrajectory.cpp  GaitTrajectory.hpp  ICartesianTrajectory.hpp  ITrajectory.hpp  KdlTrajectory.cpp  KdlTrajectory.hpp  LineTrajectory.cpp  LineTrajectory.hpp  Trajectory.cpp  Trajectory.hpp
libraries/YarpPlugins/: CMakeLists.txt  ICartesianControl.h  ICartesianSolver.h  ITwoLimbCartesianControl.h
libraries/YarpTinyMathLib/: CMakeLists.txt  YarpTinyMath.cpp  YarpTinyMath.hpp
programs/ftCompensation/: CMakeLists.txt  FtCompensation.cpp  FtCompensation.hpp  LogComponent.cpp  LogComponent.hpp  main.cpp
programs/haarDetectionController/: CMakeLists.txt  GrabberResponder.cpp  GrabberResponder.hpp  HaarDetectionController.cpp  HaarDetectionController.hpp  LogComponent.cpp  LogComponent.hpp  main.cpp
programs/keyboardController/: CMakeLists.txt  KeyboardController.cpp  KeyboardController.hpp  LinearTrajectoryThread.cpp  LinearTrajectoryThread.hpp  LogComponent.cpp  LogComponent.hpp  main.cpp
programs/rateControllerConsole/: CMakeLists.txt  RateControllerConsole.cpp  RateControllerConsole.hpp  main.cpp
programs/streamingDeviceController/: CMakeLists.txt  CentroidTransform.cpp  CentroidTransform.hpp  LeapMotionSensorDevice.cpp  LeapMotionSensorDevice.hpp  LogComponent.cpp  LogComponent.hpp  SpnavSensorDevice.cpp  SpnavSensorDevice.hpp  StreamingDevice.cpp  StreamingDevice.hpp  StreamingDeviceController.cpp  StreamingDeviceController.hpp  WiimoteDevice.cpp  WiimoteDevice.hpp  WiimoteSensorDevice.cpp  WiimoteSensorDevice.hpp  main.cpp
programs/streamingSpnav/: CMakeLists.txt  StreamingSpnav.cpp  StreamingSpnav.hpp  main.cpp
programs/teoCollisionAvoidance/: CMakeLists.txt  ControlboardContainer.hpp  TeoCollisionAvoidance.cpp  TeoCollisionAvoidance.hpp  TeoCollisionAvoidanceRateThread.cpp  TeoCollisionAvoidanceRateThread.hpp  main.cpp
programs/transCoords/: CMakeLists.txt  PremultPorts.hpp  TransCoords.cpp  main.cpp  (+1 more)
ros2/: CMakeLists.txt
share/: CMakeLists.txt
test/: CMakeLists.txt  testAsibotSolverFromFile.cpp  testBasicCartesianControl.cpp  testKdlSolver.cpp  testKdlSolverFromFile.cpp  testKdlTrajectory.cpp  testKinRepresentation.cpp
tests/: CMakeLists.txt  testAsibotSolverFromFile.cpp  testBasicCartesianControl.cpp  testKdlSolver.cpp  testKdlSolverFromFile.cpp  testKdlTrajectory.cpp  testKinRepresentation.cpp  testScrewTheory.cpp
(+733 files in other folders)
